@@ -147,6 +147,12 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
         </dependency>
+        
+        <dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		</dependency>
 
 		<!-- servlet -->
 		<dependency>
@@ -307,6 +313,29 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+		        <artifactId>maven-surefire-plugin</artifactId>
+		        <version>2.4.3</version>
+		        <configuration>
+		          <!-- testFailureIgnore: test ignore (default=false). true is temporary setting. -->
+		          <testFailureIgnore>true</testFailureIgnore>
+		          <excludes>
+		            <exclude>**/Abstract*</exclude>
+		            <exclude>**/*$*</exclude>
+		            <exclude>**/Mock*.java</exclude>
+		            <exclude>**/Base*.java</exclude>
+		            <exclude>**/Test*.java</exclude>
+		          </excludes>
+		          <systemProperties>
+		            <property>
+		              <name>java.util.logging.config.file</name>
+		              <value>${project.build.testOutputDirectory}/logging.test.properties</value>
+		            </property>
+		          </systemProperties>
+		          <argLine>-server -Xmx512m -Xms256m -XX:MaxPermSize=128M</argLine>
+		        </configuration>
+		      </plugin>
+			
 		</plugins>
 		
 		 <!--配置Maven 对resource文件 过滤 -->
